java version changed from 17 to 8